[package]
name = "spansy"
version = "0.1.0"
edition = "2021"
description = "Parsing with span information"
repository = "https://github.com/sinui0/spansy"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.4.0"
httparse = "1.8.0"
pest = { version = "2.7.2" }
pest_derive = { version = "2.7.2" }
thiserror = "1.0.47"
