[package]
name = "spansy"
version = "0.1.0"
edition = "2021"
description = "Parsing with span information"
repository = "https://github.com/sinui0/spansy"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = ["dep:serde", "bytes/serde"]

[dependencies]
bytes = "1.4"
httparse = "1.8"
pest = { version = "2.7" }
pest_derive = { version = "2.7" }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
pest_grammars = { version = "2.7.5" }
